--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
                     <arguments>
                         <argument>-classpath</argument>
                         <classpath/>
-                        <argument>io.battlesnake.starter.Snake</argument>
+                        <argument>io.battlesnake.starter.SnakeApplication</argument>
                     </arguments>
                 </configuration>
             </plugin>
@@ -94,7 +94,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        io.battlesnake.starter.Snake
+                                      io.battlesnake.starter.SnakeApplication
                                     </mainClass>
                                 </manifest>
                             </archive>
